# GoLift

./: .gitignore  README.md  kali_back.bat  skills-lock.json
backend/: .gitignore  README.md  alembic.ini  backend_routes.md  pyproject.toml  run.py
backend/alembic/: env.py
backend/alembic/versions/: 072fe86ce200_add_address_id_and_creator_name_columsn_.py  0a3301eed8b2_add_remove_start_date_and_end_date_in_.py  0d747c475f91_initial_tables.py  141f2e73c974_update_the_workout_sets_tables.py  1d4569bc6281_update_workout_templates_and_template_.py  2dcfc2b9794e_fix_the_connection_between_tables.py  35a8b84dca70_add_address_id_and_creator_name_columsn_.py  4332137f42a6_mistakly_remove_is_active_create_at_and_.py  49948b586213_remove_is_regular_columns_from_user_.py  5b809db4e7ee_add_columns_start_end_and_duration_.py  62608cd5d6a7_fix_the_name_of_target_muscle_in_.py  729077d748f2_add_body_part_target_instruction_icon_.py  74edc0aa8282_create_mew_workout_recommendations_.py  a1c07cff80a4_fix_duplicate_index_issue.py  a81e65607443_add_theme_to_user.py  bf9a2f0ff0d3_removed_duplication_in_code_of_sql.py  c7a306caf05c_turn_datatype_of_reps_int_into_string_.py  def0268ef4e3_table_create_for_logout.py  e39a9704d776_update_the_table_in_database.py  eaebad4b8891_add_logout_columns.py  fe79f978e8e1_transfer_weight_km_cols_from_bodymetric_.py
backend/app/: main.py
backend/app/core/: __init__.py  config.py  exceptions.py  lifespan.py  logger.py  security.py  utils.py
backend/app/database/: __init__.py  db_conn.py
backend/app/schemas/: __init__.py  exercise.py  insights.py  (+6 more)
(+146 files in other folders)
